@@ -3,6 +3,7 @@
  - Adding menu to Unenchanting block.
  - Adding tooltip to Unenchanting screen.
  - Unenchanting items in Unechanting block.
+ - Improve Unenchanting menu screen.
 0.0.1-1.20.4:
  - Clean project.
  - New block: The Unenchanting table.
